--- a/lmms_video/configs/llava_ov_fast_slow_autoregressive.yaml
+++ b/lmms_video/configs/llava_ov_fast_slow_autoregressive.yaml
@@ -13,6 +13,9 @@
 
       # Parquet 文件路径（支持通配符）
       dataset_path: "/blob/LLaVA-Video-178K-parquet/*.parquet"
+      
+      # 视频文件基础路径（parquet 中的视频路径是相对路径，需要拼接这个基础路径）
+      data_folder: "/blob/LLaVA-Video-178K"
 
       # 视频处理参数（使用 DatasetConfig 支持的参数）
       video_sampling_strategy: "frame_num"  # 或 "fps"
